fixed .resume-section alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -119,10 +119,6 @@ ul {padding: 0; margin: 0;}
     margin-top: 10;
 }
 
-.about .container{
-
-}
-
 .resume-section-title{
     font-weight: bold;
     font-size: 15pt;
@@ -135,8 +131,14 @@ ul {padding: 0; margin: 0;}
 }
 
 .resume-section{
-    margin-left: 70px;
-    margin-right: 70px;
+    margin: auto;
+    max-width: 1300px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.resume-section .container{
+    vertical-align: baseline;
 }
 
 .resume-section p{
